more minor changes before adding 'Error handling'

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Logs
+# logs
 logs
 *.log
 npm-debug.log*
@@ -7,10 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-*.local
-
-# Editor directories and files
+# editor directories and files
 .vscode
 !.vscode/extensions.json
 .idea
@@ -20,4 +17,8 @@ node_modules
 *.njsproj
 *.sln
 *.sw?
+
+# etc
+node_modules
+*.local
 .env
