--- a/part3/package.json
+++ b/part3/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../part2 && npm run build && cp -r dist ../part3",
-    "deploy:full": "npm run build:ui && git add -A && git commit -m uibuild && git push origin main"
+    "deploy:full": "npm run build:ui && git add -A && git commit -m uibuild && git push origin main",
+    "lint": "eslint ."
   },
   "author": "Mdan22",
   "license": "MIT",
@@ -19,6 +20,10 @@
     "mongoose": "^8.5.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
+    "@stylistic/eslint-plugin-js": "^2.8.0",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
     "nodemon": "^3.1.0"
   }
 }
