--- a/part3/package.json
+++ b/part3/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../part2 && npm run build && cp -r dist ../part3",
     "deploy:full": "npm run build:ui && git add -A && git commit -m uibuild && git push origin main",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "node --test"
   },
   "author": "Mdan22",
   "license": "MIT",
