--- a/part3/package.json
+++ b/part3/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node --test",
     "build:ui": "rm -rf dist && cd ../part2 && npm run build && cp -r dist ../part3",
     "deploy:full": "npm run build:ui && git add -A && git commit -m uibuild && git push origin main",
-    "lint": "eslint .",
-    "test": "node --test"
+    "lint": "eslint ."
   },
   "author": "Mdan22",
   "license": "MIT",
