add npm deploy script

--- a/part4/package.json
+++ b/part4/package.json
@@ -8,6 +8,7 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env  NODE_ENV=test node --test",
     "build:ui": "rm -rf dist && cd ../part5 && npm run build && cp -r dist ../part4",
+    "deploy": "npm run build:ui && npm run dev",
     "deploy:full": "npm run build:ui && git add -A && git commit -m uibuild && git push origin main",
     "lint": "eslint ."
   },
