--- a/part5/package.json
+++ b/part5/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -23,7 +24,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "json-server": "^0.17.4",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^5.4.8"
   }
 }
