--- a/part5/package.json
+++ b/part5/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-vitest-globals": "^1.5.0",
     "jsdom": "^25.0.1",
     "json-server": "^1.0.0-beta.3",
     "vite": "^5.4.8",
