--- a/part4/package.json
+++ b/part4/package.json
@@ -7,6 +7,7 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env  NODE_ENV=test node --test",
+    "start:test": "cross-env NODE_ENV=test node index.js",
     "build:ui": "rm -rf dist && cd ../part5 && npm run build && cp -r dist ../part4",
     "deploy": "npm run build:ui && npm run dev",
     "deploy:render": "cd ../part5 && npm install && npm run build && cp -r dist ../part4/dist && cd ../part4 && npm install",
