clean up redundant e2e files

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ dist
 
 # test coverage
 coverage
+
+# playwright-specific
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
