--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ coverage
 
 # playwright-specific
 node_modules/
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
+test-results/
+playwright-report/
+blob-report/
+playwright/.cache/
